--- a/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_profile.xml
@@ -26,6 +26,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <com.ddscanner.ui.views.LoginView
+                android:id="@+id/login_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+               />
             <com.rey.material.widget.ProgressView
                 android:id="@+id/progress_bar"
                 android:layout_width="match_parent"
@@ -39,9 +44,10 @@
 
             <ScrollView
                 android:id="@+id/about"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="#f9f9f9">
 
                 <LinearLayout
                     android:layout_width="match_parent"
