--- a/trunk/ddscanner/app/src/main/res/layout/activity_certificate_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_certificate_details.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+            name="viewModel"
+            type="com.ddscanner.screens.profile.divecenter.courses.certificate.CerificateDetailsActivityViewModel"/>
+    </data>
 <LinearLayout android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -38,6 +44,7 @@
                     android:textStyle="normal"
                     android:textColor="#212121"
                     android:lineSpacingExtra="10sp"
+                    android:text="@{viewModel.certificate.whatWillBeLearned}"
                     tools:text="The Tec 40 course consists of three knowledge development sections, three practical application sessions and four training dives. You’ll learn about:"
                     />
             </com.ddscanner.ui.views.ContentBlockLinearLayout>
@@ -66,6 +73,7 @@
                     android:textStyle="normal"
                     android:textColor="#212121"
                     android:lineSpacingExtra="10sp"
+                    android:text="@{viewModel.certificate.requirements}"
                     tools:text="The Tec 40 course consists of three knowledge development sections, three practical application sessions and four training dives. You’ll learn about:"
                     />
             </com.ddscanner.ui.views.ContentBlockLinearLayout>
@@ -100,3 +108,4 @@
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
+</layout>
