--- a/trunk/ddscanner/app/src/main/res/layout/item_cources_list.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_cources_list.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.ddscanner.screens.profile.divecenter.courses.list.CourceListItemViewModel" />
+            type="com.ddscanner.screens.profile.divecenter.courses.list.CourseListItemViewModel" />
     </data>
 <com.ddscanner.ui.views.ContentBlockRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -18,7 +18,8 @@
         android:id="@+id/logo"
         android:layout_width="46dp"
         android:layout_height="46dp"
-        android:src="@drawable/logo_padi"/>
+        android:src="@drawable/logo_padi"
+        app:loadAssociationLogo="@{viewModel.courseDetails.resourceId}"/>
     <LinearLayout
         android:layout_marginLeft="16dp"
         android:layout_toRightOf="@+id/logo"
